@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ModSyncNinjaData>
+	<ID>fad48664-b2c5-4e64-b3dd-27ac4a8d295e</ID>
+	<ModName>Mechanical Defense 2 - mechanical walls</ModName>
+	<Version>b18-1.0.0</Version>
+	<SaveBreaking>false</SaveBreaking>
+</ModSyncNinjaData>
