@@ -7,3 +7,7 @@ personal changelog for mod "MD2 mechanical walls"
 	- fixed a bit of an issue on the embrasure (2,3 and 2,4 positions in the grid)
 		where the corner would connect strangely to other straights
 		(t-conections sideways still seem a bit cut off)
+
+- 20/01/2018
+
+	- added modsync
